--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -3,8 +3,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xsplit-broadcaster</id>
-    <version>4.3.2202.1228</version>
-    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.3.2202.1228</packageSourceUrl>
+    <version>4.4.2206.2901</version>
+    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.4.2206.2901</packageSourceUrl>
     <owners>sublym0nal</owners>
     <title>XSplit Broadcaster</title>
     <authors>SplitmediaLabs, Ltd.</authors>
@@ -33,63 +33,9 @@ XSplit Broadcaster, the best all-in-one streaming and recording application for 
 
 ---
 
-## Package Notes
-
-The installer executed by this package was built using Advanced Installer. For advanced setup scenarios, refer to [Advanced Installer's documentation for command-line switches](https://www.advancedinstaller.com/user-guide/exe-setup-file.html).
-
-For your convenience, the bootstrapper-specific details are included below:
-
-* Languages:
-
-    |lang_id|Language Name|
-    |-|-|
-    |1033|English (United States)|
-    |1028|Chinese (Traditional, Taiwan)|
-    |2052|Chinese (Simplified, China)|
-    |1031|German (Germany)|
-    |1036|French (France)|
-    |1041|Japanese (Japan)|
-    |1042|Korean (Korea)|
-    |1046|Portuguese (Brazil)|
-    |1049|Russian (Russia)|
-    |3082|Spanish (Spain, International Sort)|
-    |1054|Thai (Thailand)|
-
-* Prerequisites:
-
-    N/A
-
-Notable Windows Installer properties include:
-* `AI_DESKTOP_SH` - Add shortcut(s) to the Desktop. Defaults to `1`, disable with `0`.
-* `AI_STARTMENU_SH` - Add shortcut(s) to the Start Menu. Defaults to `1`, disable with `0`.
-* `AI_QUICKLAUNCH_SH` - Add shortcut(s) to the Quick Launch toolbar. Defaults to `1`, disable with `0`.
-* `AI_ADMINSH_SH` - Creates Admin Mode shortcuts. These exist side-by-side with the standard created shortcuts. The benefits of using these include GPU prioritization and better capture performance when gaming. Defaults to `1`, disable with `0`.
-* `RUNAPP` - Launch XSplit Broadcaster upon completion. Defaults to `0` during a silent install, enable with `1`.
-
-If your use case requires a proprietary command-line switch, note that these must be passed *before* any `msiexec` arguments. Therefore, you will need to override this package's default install arguments using Chocolatey's `--override-arguments` switch, then define any desired arguments (including the `msiexec` arguments) within the `--install-arguments` option. 
-
-If your use case only requires additional `msiexec` arguments, then these can simply be appended to the package's default install arguments using Chocolatey's `--install-arguments` option.
-
-In either case, consider reviewing the default arguments as defined in `chocolateyinstall.ps1` to determine what arguments should be carried over.
-
-### Examples
-
-```
-choco install xsplit-broadcaster --override-arguments --install-arguments "/exenoui /exelang 3082 /exelog `"ExeInstall.log`" /qn /norestart /l*v `"MsiInstall.log`""
-```
-
-```
-choco install xsplit-broadcaster --install-arguments "AI_DESKTOP_SH=0 AI_QUICKLAUNCH_SH=0 RUNAPP=1"
-```
-
----
-
-For future upgrade operations, consider opting into Chocolatey's `useRememberedArgumentsForUpgrades` feature to avoid having to pass the same arguments with each upgrade:
-```
-choco feature enable -n=useRememberedArgumentsForUpgrades
-```
+## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.4.2206.2901/PACKAGE-NOTES.md)
 ]]></description>
-    <releaseNotes>https://docs.google.com/document/d/e/2PACX-1vREPmEtmiwXg_Z9N3zSvBU_VhYaw9oM-FHvZduXV_asztylmmC9kZvNQ-2YlssBLlSalG33r3q14nAs/pub</releaseNotes>
+    <releaseNotes>https://docs.google.com/document/d/e/2PACX-1vQjlPVw9rs8YQRWMJa_rCONzlxLBLNXCeCtWD0GadEljKcXWqQy7itHZM39LxPEz_etABRi-jlqboP-/pub</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-os-dependency.extension" version="0.0.1" />
       <dependency id="dotnetfx" version="4.8.0.0" />
