--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -14,7 +14,7 @@
     <licenseUrl>https://www.xsplit.com/terms-and-conditions</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <docsUrl>https://www.xsplit.com/support/broadcaster</docsUrl>
-    <mailingListUrl>https://community.xsplit.com/c/broadcaster/6</mailingListUrl>
+    <mailingListUrl>https://www.reddit.com/r/xsplitofficial/</mailingListUrl>
     <tags>xsplit broadcaster live stream livestream live-stream youtube twitch facebook younow restream niconico streamshark rtmp recording 64-bit freemium</tags>
     <summary>Live Streaming &amp; Recording Studio</summary>
     <description><![CDATA[
