--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -13,7 +13,7 @@
     <copyright>© 2022 SplitmediaLabs, Ltd. All Rights Reserved.</copyright>
     <licenseUrl>https://www.xsplit.com/terms-and-conditions</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <docsUrl>https://www.xsplit.com/support/broadcaster</docsUrl>
+    <docsUrl>https://support.xsplit.com/en/category/xsplit-broadcaster-1el49gp/</docsUrl>
     <mailingListUrl>https://www.reddit.com/r/xsplitofficial/</mailingListUrl>
     <tags>xsplit broadcaster live stream livestream live-stream youtube twitch facebook younow restream niconico streamshark rtmp recording 64-bit freemium</tags>
     <summary>Live Streaming &amp; Recording Studio</summary>
