--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -3,8 +3,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xsplit-broadcaster</id>
-    <version>4.5.2311.2109-internal</version>
-    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2311.2109-internal</packageSourceUrl>
+    <version>4.5.2311.2110-internal</version>
+    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2311.2110-internal</packageSourceUrl>
     <owners>sublym0nal</owners>
     <title>XSplit Broadcaster</title>
     <authors>SplitmediaLabs Ltd.</authors>
@@ -17,16 +17,7 @@
     <mailingListUrl>https://www.reddit.com/r/xsplitofficial/</mailingListUrl>
     <tags>xsplit broadcaster live stream livestream live-stream youtube twitch facebook younow restream niconico streamshark rtmp recording 64-bit freemium</tags>
     <summary>Live Streaming &amp; Recording Studio</summary>
-    <description><![CDATA[
----
-
-### [choco://xsplit-broadcaster](choco://xsplit-broadcaster)
-
-To use choco:// protocol URLs, install [(unofficial) choco:// Protocol support](https://community.chocolatey.org/packages/choco-protocol-support)
-
----
-
-### Powerful Live streaming and recording studio that offers limitless customization
+    <description><![CDATA[### Powerful Live streaming and recording studio that offers limitless customization
 
 XSplit Broadcaster, the best all-in-one streaming and recording application for content creation, powers the biggest events in gaming, esports and more.
 
@@ -34,7 +25,7 @@ XSplit Broadcaster, the best all-in-one streaming and recording application for 
 
 ---
 
-## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2311.2109-internal/PACKAGE-NOTES.md)
+## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2311.2110-internal/PACKAGE-NOTES.md)
 ]]></description>
     <releaseNotes></releaseNotes>
     <dependencies>
