--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -14,7 +14,7 @@
     <licenseUrl>https://www.xsplit.com/terms-and-conditions</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <docsUrl>https://support.xsplit.com/en/category/xsplit-broadcaster-1el49gp/</docsUrl>
-    <mailingListUrl>https://www.reddit.com/r/xsplitofficial/</mailingListUrl>
+    <mailingListUrl>https://www.reddit.com/r/xsplit/</mailingListUrl>
     <tags>xsplit broadcaster live stream livestream live-stream youtube twitch facebook younow restream niconico streamshark rtmp recording 64-bit freemium</tags>
     <summary>Live Streaming &amp; Recording Studio</summary>
     <description><![CDATA[### Powerful Live streaming and recording studio that offers limitless customization
