--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -3,8 +3,8 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xsplit-broadcaster</id>
-    <version>4.5.2410.2202-internal</version>
-    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2410.2202-internal</packageSourceUrl>
+    <version>4.5.2409.1208</version>
+    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2409.1208</packageSourceUrl>
     <owners>sublym0nal</owners>
     <title>XSplit Broadcaster</title>
     <authors>SplitmediaLabs Ltd.</authors>
@@ -25,9 +25,9 @@ XSplit Broadcaster, the best all-in-one streaming and recording application for 
 
 ---
 
-## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2410.2202-internal/PACKAGE-NOTES.md)
+## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2409.1208/PACKAGE-NOTES.md)
 ]]></description>
-    <releaseNotes></releaseNotes>
+    <releaseNotes>https://docs.google.com/document/d/e/2PACX-1vRPtOsKoq-X1yqU0kZ5v9o6mHGbobRK7Y5qHBpkEcCgXVt6HW5oftvTI-o4_CoePhT-V9KbTdI1L_WI/pub</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-os-dependency.extension" version="0.0.1" />
       <dependency id="chocolatey-fastanswers.extension" version="0.0.1" />
