--- a/xsplit-broadcaster.nuspec
+++ b/xsplit-broadcaster.nuspec
@@ -3,14 +3,14 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2015/06/nuspec.xsd">
   <metadata>
     <id>xsplit-broadcaster</id>
-    <version>4.5.2412.306</version>
-    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2412.306</packageSourceUrl>
+    <version>4.5.2501.2802</version>
+    <packageSourceUrl>https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/tree/v4.5.2501.2802</packageSourceUrl>
     <owners>sublym0nal</owners>
     <title>XSplit Broadcaster</title>
     <authors>SplitmediaLabs Ltd.</authors>
     <projectUrl>https://www.xsplit.com/broadcaster</projectUrl>
     <iconUrl>https://cdn.jsdelivr.net/gh/brogers5/chocolatey-package-xsplit-broadcaster@e68e6db6b26c789efde0af0d5cb368a9212770e0/xsplit-broadcaster.png</iconUrl>
-    <copyright>© 2024 SplitmediaLabs, Ltd. All Rights Reserved.</copyright>
+    <copyright>© 2025 SplitmediaLabs, Ltd. All Rights Reserved.</copyright>
     <licenseUrl>https://www.xsplit.com/terms-and-conditions</licenseUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <docsUrl>https://support.xsplit.com/en/category/xsplit-broadcaster-1el49gp/</docsUrl>
@@ -25,9 +25,9 @@ XSplit Broadcaster, the best all-in-one streaming and recording application for 
 
 ---
 
-## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2412.306/PACKAGE-NOTES.md)
+## [Package Notes](https://github.com/brogers5/chocolatey-package-xsplit-broadcaster/blob/v4.5.2501.2802/PACKAGE-NOTES.md)
 ]]></description>
-    <releaseNotes>https://docs.google.com/document/d/e/2PACX-1vTUb-q-yWRoLwR5gJWGf229Q9qzhYIZSjHwbH7QXooDocBl9GJcbe4Yd21okvAW-NS3TrZkxPiJrs9R/pub</releaseNotes>
+    <releaseNotes>https://xspl.it/bc/relnotes/4.5.2501.2802</releaseNotes>
     <dependencies>
       <dependency id="chocolatey-os-dependency.extension" version="0.0.1" />
       <dependency id="chocolatey-fastanswers.extension" version="0.0.1" />
